// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<StepResult /> should render no results 1`] = `
.c1 {
  margin-bottom: 1.6rem;
  padding: 1rem 2rem;
  color: #3e486e;
  font-size: 1.6rem;
  background-color: #f2f5fa;
  border: 1px solid #f2f5fa;
  border-radius: 0.6rem;
}

.c1 > *:first-child {
  margin-top: 0;
}

.c1 > *:last-child {
  margin-bottom: 0;
}

.c0 {
  margin-top: 3.2rem;
  margin-bottom: 2rem;
  color: #4d73b8;
  font-weight: 600;
  font-size: 1.8rem;
  font-family: "Open Sans",sans-serif;
}

<div>
  <h2
    class="c0"
  >
    Nombre d’heures d’absence autorisée pour rechercher un emploi
  </h2>
  <p>
    D’après les éléments saisis, dans votre situation, la convention collective ne prévoit pas d’heures d’absence autorisée pour rechercher un emploi.
  </p>
  <div
    class="c1"
  >
    Un accord d’entreprise ou à défaut un usage dans la profession ou l’entreprise peut prévoir que le salarié bénéficie d’heures d’absence autorisée pour rechercher un emploi pendant le préavis.
  </div>
  <h2
    class="c0"
  >
    Récapitulatif des éléments saisis
  </h2>
  <ul>
    <li>
      Convention collective
       : 
      <strong>
        Entreprises de la publicité et assimilées (IDCC 86)
      </strong>
    </li>
    <li>
      Type de rupture du contrat de travail
       : 
      <strong>
        Rupture de la période d'essai
      </strong>
    </li>
    <li>
      Initiative de la rupture de la période d'essai
       : 
      <strong>
        Le salarié
      </strong>
    </li>
    <li>
      Catégorie professionnelle
       : 
      <strong>
        Agents de maîtrise et Techniciens
      </strong>
    </li>
  </ul>
  <h2
    class="c0"
  >
    Source
  </h2>
  <ul>
    <li>
      <a
        aria-label="Article 33 (nouvelle fenêtre)"
        href="https://www.legifrance.gouv.fr/affichIDCC.do?idSectionTA=KALISCTA000005753582&cidTexte=KALITEXT000005682357&idConvention=KALICONT000005635630&dateTexte=29990101"
        rel="noopener noreferrer"
        target="_blank"
        title="Consultez l’article 33"
      >
        Article 33
      </a>
    </li>
  </ul>
</div>
`;

exports[`<StepResult /> should render with duration 1`] = `
.c3 {
  margin-bottom: 1.6rem;
  padding: 1rem 2rem;
  color: #3e486e;
  font-size: 1.6rem;
  background-color: #f2f5fa;
  border: 1px solid #f2f5fa;
  border-radius: 0.6rem;
}

.c3 > *:first-child {
  margin-top: 0;
}

.c3 > *:last-child {
  margin-bottom: 0;
}

.c0 {
  margin-top: 3.2rem;
  margin-bottom: 2rem;
  color: #4d73b8;
  font-weight: 600;
  font-size: 1.8rem;
  font-family: "Open Sans",sans-serif;
}

.c1 {
  color: #f66663;
  font-weight: 700;
  font-size: 1.8rem;
  white-space: pre-line;
}

.c2 {
  font-size: 1.5em;
}

@media (max-width:600px) {
  .c1 {
    font-size: 1.6rem;
  }
}

<div>
  <h2
    class="c0"
  >
    Nombre d’heures d’absence autorisée pour rechercher un emploi
  </h2>
  <p>
    D’après les éléments saisis, durant son préavis, le salarié peut s’absenter pour rechercher un emploi pendant
     : 
    <strong
      class="c1 c2"
    >
      2 heures par jour
    </strong>
    .
  </p>
  <h2
    class="c0"
  >
    Rémunération pendant les heures d’absence autorisée
  </h2>
  <p>
    Le salaire est maintenu.
  </p>
  <h2
    class="c0"
  >
    Conditions d’utilisation
  </h2>
  <p>
    Le salarié fixe par accord avec l'employeur la période de la journée pendant laquelle il prend ces 2 heures. Si l'employeur et le salarié le décident ensemble, ces heures peuvent être prises, de façon groupée, en une ou plusieurs journées ou demi-journées, consécutives ou non. En cas d'absence d'accord entre l'employeur et le salarié, ces 2 heures sont fixées un jour par l'employeur et, le jour suivant, par le salarié. Lorsque le salarié a retrouvé un emploi, il doit immédiatement en informer l'employeur et ne pourra plus utiliser les heures d'absence autorisée pour rechercher un emploi.
  </p>
  <div
    class="c3"
  >
    Si un accord d’entreprise ou à défaut un usage dans la profession ou l’entreprise plus récent prévoit des heures d’absence autorisée pour rechercher un emploi pendant le préavis, le salarié en bénéficie si ces mesures sont plus favorables que la convention collective.
  </div>
  <h2
    class="c0"
  >
    Récapitulatif des éléments saisis
  </h2>
  <ul>
    <li>
      Convention collective
       : 
      <strong>
        Entreprises de la publicité et assimilées (IDCC 86)
      </strong>
    </li>
    <li>
      Type de rupture du contrat de travail
       : 
      <strong>
        Démission
      </strong>
    </li>
    <li>
      Catégorie professionnelle
       : 
      <strong>
        Employés
      </strong>
    </li>
  </ul>
  <h2
    class="c0"
  >
    Source
  </h2>
  <ul>
    <li>
      <a
        aria-label="Article 29 (nouvelle fenêtre)"
        href="https://www.legifrance.gouv.fr/affichIDCCArticle.do?idArticle=KALIARTI000005857303&cidTexte=KALITEXT000005682357&dateTexte=19740607"
        rel="noopener noreferrer"
        target="_blank"
        title="Consultez l’article 29"
      >
        Article 29
      </a>
    </li>
  </ul>
</div>
`;

exports[`<StepResult /> should render with when no CC 1`] = `
.c3 {
  margin-bottom: 1.6rem;
  padding: 1rem 2rem;
  color: #3e486e;
  font-size: 1.6rem;
  background-color: #f2f5fa;
  border: 1px solid #f2f5fa;
  border-radius: 0.6rem;
}

.c3 > *:first-child {
  margin-top: 0;
}

.c3 > *:last-child {
  margin-bottom: 0;
}

.c0 {
  margin-top: 3.2rem;
  margin-bottom: 2rem;
  color: #4d73b8;
  font-weight: 600;
  font-size: 1.8rem;
  font-family: "Open Sans",sans-serif;
}

.c1 {
  color: #f66663;
  font-weight: 700;
  font-size: 1.8rem;
  white-space: pre-line;
}

.c2 {
  font-size: 1.5em;
}

@media (max-width:600px) {
  .c1 {
    font-size: 1.6rem;
  }
}

<div>
  <h2
    class="c0"
  >
    Nombre d’heures d’absence autorisée pour rechercher un emploi
  </h2>
  <p>
    <strong
      class="c1 c2"
    >
      Aucun résultat
    </strong>
     : 
    la convention collective n’a pas été renseignée.
  </p>
  <p>
    Le code du travail ne prévoit pas le droit pour le salarié de s’absenter pendant son préavis pour pouvoir rechercher un nouvel emploi. Il existe une exception dans les départements de la Moselle, du Bas-Rhin et du Haut-Rhin où le salarié, qui en fait la demande, a droit à un délai raisonnable pour rechercher un emploi pendant son préavis de licenciement.
  </p>
  <div
    class="c3"
  >
    Une convention collective, un accord d’entreprise ou à défaut un usage dans la profession ou l’entreprise peut prévoir que le salarié bénéficie d’heures d’absence autorisée pour rechercher un emploi pendant le préavis. Il peut s’agir du préavis en cas de rupture de la période d’essai, de démission ou de licenciement.
  </div>
  <h2
    class="c0"
  >
    Récapitulatif des éléments saisis
  </h2>
  <ul />
  <h2
    class="c0"
  >
    Source
  </h2>
  <ul>
    <li>
      <a
        aria-label="Article L. 1234-17 du code du travail (nouvelle fenêtre)"
        href="https://www.legifrance.gouv.fr/affichCodeArticle.do;jsessionid=CC74669AD1BB161A1534D72EE0B76FE4.tplgfr29s_3?idArticle=LEGIARTI000006901133&cidTexte=LEGITEXT000006072050&dateTexte=20200102"
        rel="noopener noreferrer"
        target="_blank"
        title="Consultez l’article l. 1234-17 du code du travail"
      >
        Article L. 1234-17 du code du travail
      </a>
    </li>
  </ul>
</div>
`;

exports[`<StepResult /> should render with when unhandled CC 1`] = `
.c3 {
  margin-bottom: 1.6rem;
  padding: 1rem 2rem;
  color: #3e486e;
  font-size: 1.6rem;
  background-color: #f2f5fa;
  border: 1px solid #f2f5fa;
  border-radius: 0.6rem;
}

.c3 > *:first-child {
  margin-top: 0;
}

.c3 > *:last-child {
  margin-bottom: 0;
}

.c0 {
  margin-top: 3.2rem;
  margin-bottom: 2rem;
  color: #4d73b8;
  font-weight: 600;
  font-size: 1.8rem;
  font-family: "Open Sans",sans-serif;
}

.c1 {
  color: #f66663;
  font-weight: 700;
  font-size: 1.8rem;
  white-space: pre-line;
}

.c2 {
  font-size: 1.5em;
}

@media (max-width:600px) {
  .c1 {
    font-size: 1.6rem;
  }
}

<div>
  <h2
    class="c0"
  >
    Nombre d’heures d’absence autorisée pour rechercher un emploi
  </h2>
  <p>
    <strong
      class="c1 c2"
    >
      Aucun résultat
    </strong>
     : 
    la convention collective n’a pas encore été traitée par nos services.
    <br />
    Vous pouvez faire une recherche par mots-clés dans
     
    <a
      href="/convention-collective/1561-cordonnerie-multiservice"
    >
      votre convention collective
    </a>
  </p>
  <p>
    Le code du travail ne prévoit pas le droit pour le salarié de s’absenter pendant son préavis pour pouvoir rechercher un nouvel emploi. Il existe une exception dans les départements de la Moselle, du Bas-Rhin et du Haut-Rhin où le salarié, qui en fait la demande, a droit à un délai raisonnable pour rechercher un emploi pendant son préavis de licenciement.
  </p>
  <div
    class="c3"
  >
    Une convention collective, un accord d’entreprise ou à défaut un usage dans la profession ou l’entreprise peut prévoir que le salarié bénéficie d’heures d’absence autorisée pour rechercher un emploi pendant le préavis. Il peut s’agir du préavis en cas de rupture de la période d’essai, de démission ou de licenciement.
  </div>
  <h2
    class="c0"
  >
    Récapitulatif des éléments saisis
  </h2>
  <ul>
    <li>
      Convention collective
       : 
      <strong>
        Cordonnerie multiservice (IDCC 1561)
      </strong>
    </li>
  </ul>
  <h2
    class="c0"
  >
    Source
  </h2>
  <ul>
    <li>
      <a
        aria-label="Article L. 1234-17 du code du travail (nouvelle fenêtre)"
        href="https://www.legifrance.gouv.fr/affichCodeArticle.do;jsessionid=CC74669AD1BB161A1534D72EE0B76FE4.tplgfr29s_3?idArticle=LEGIARTI000006901133&cidTexte=LEGITEXT000006072050&dateTexte=20200102"
        rel="noopener noreferrer"
        target="_blank"
        title="Consultez l’article l. 1234-17 du code du travail"
      >
        Article L. 1234-17 du code du travail
      </a>
    </li>
  </ul>
</div>
`;
